--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -13,9 +13,11 @@ jobs:
         os: [ubuntu-18.04]
     
     steps:
-    - uses: actions/checkout@v1
+    - name: update ubuntu
+      run: sudo apt-get update -y
     - name: install llvm ${{ matrix.llvm }}
       run: sudo apt-get install -y --no-install-recommends build-essential ${{ matrix.llvm }}-dev ${{ matrix.llvm }}-tools cmake
+    - uses: actions/checkout@v1
     - name: mkdir
       run: cd enzyme && mkdir build
     - name: cmake
