--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -14,7 +14,7 @@ jobs:
     
     steps:
     - name: update ubuntu
-      run: sudo apt-get update -y
+      run: sudo apt-get update -y && sudo apt-get upgrade -y
     - name: install llvm ${{ matrix.llvm }}
       run: sudo apt-get install -y --no-install-recommends build-essential ${{ matrix.llvm }}-tools cmake
     - uses: actions/checkout@v1
