--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -8,8 +8,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     
     strategy:
+      fail-fast: false
       matrix:
-        llvm: [llvm-7, llvm-6.0]
+        llvm: [llvm-6.0, llvm-7, llvm-8]
         os: [ubuntu-18.04]
     
     steps:
