Add memref/llvm.ptr handling for fwd mode (#910)
* Add memref handling for fwd mode

* Add simple llvm dialect

* Update enzyme/Enzyme/MLIR/Implementations/LLVMAutoDiffOpInterfaceImpl.cpp

Co-authored-by: Tim Gymnich <timgymnich@me.com>

* fixup

Co-authored-by: Tim Gymnich <timgymnich@me.com>

--- a/enzyme/Enzyme/MLIR/Implementations/CMakeLists.txt
+++ b/enzyme/Enzyme/MLIR/Implementations/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_mlir_library(MLIREnzymeImplementations
   ArithAutoDiffOpInterfaceImpl.cpp
+  LLVMAutoDiffOpInterfaceImpl.cpp
+  MemRefAutoDiffOpInterfaceImpl.cpp
   BuiltinAutoDiffTypeInterfaceImpl.cpp
   SCFAutoDiffOpInterfaceImpl.cpp
 
@@ -8,6 +10,8 @@ add_mlir_library(MLIREnzymeImplementations
 
   LINK_LIBS PUBLIC
   MLIRArithDialect
+  MLIRLLVMDialect
+  MLIRMemRefDialect
   MLIREnzymeAutoDiffInterface
   MLIRIR
   MLIRSCFDialect
