--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
     needs: build-libc
     strategy:
       matrix:
-        os: [self-hosted-ubuntu, macos-12, windows-2019]
+        os: [self-hosted-ubuntu, macos-12, self-hosted-windows]
         arch: [x86, aarch64]
         exclude:
           - os: windows-2019
@@ -216,17 +216,16 @@ jobs:
       # Windows
 
       - name: Set up MinGW
-        if: matrix.os == 'windows-2019' && matrix.arch == 'x86'
+        if: (matrix.os == 'windows-2019' || matrix.os == 'self-hosted-windows' ) && matrix.arch == 'x86'
         uses: egor-tensin/setup-mingw@v2
       
       - name: Install ninja
-        if: matrix.os == 'windows-2019' && matrix.arch == 'x86'
+        if: (matrix.os == 'windows-2019' || matrix.os == 'self-hosted-windows' ) && matrix.arch == 'x86'
         uses: seanmiddleditch/gha-setup-ninja@master
 
       - name: Build (Windows)
-        if: matrix.os == 'windows-2019' && matrix.arch == 'x86'
+        if: (matrix.os == 'windows-2019' || matrix.os == 'self-hosted-windows' ) && matrix.arch == 'x86'
         shell: bash
-        # TODO: remove once Windows is validated!
         env:
           WASIX_NO_UPDATE_REPOS: '1'
           WASIX_COMPONENTS: rust
@@ -239,19 +238,10 @@ jobs:
           GITHUB_ACTIONS=false WASIX_BUILD_DIR=$GITHUB_WORKSPACE cargo run -- wasix build-toolchain
 
       - name: Archive build output (Windows)
-        if: matrix.os == 'windows-2019' && matrix.arch == 'x86'
+        if: (matrix.os == 'windows-2019' || matrix.os == 'self-hosted-windows' ) && matrix.arch == 'x86'
         uses: actions/upload-artifact@v3
         with:
           name: rust-toolchain-x86_64-pc-windows-msvc
           path: |
             wasix-rust/build/x86_64-pc-windows-msvc/stage2
             !wasix-rust/build/x86_64-pc-windows-msvc/stage2/lib/rustlib/src
-
-      # Clean up the build directory.
-      # This is required because otherwise the disk is to full for Github Action
-      # cleanup and the build fails.
-      - name: Clean up disk (Windows)
-        if: matrix.os == 'windows-2019'
-        shell: bash
-        run: |
-          rm -rf wasix-rust/build || true
