--- a/compiler/rustc/Cargo.toml
+++ b/compiler/rustc/Cargo.toml
@@ -13,13 +13,19 @@ rustc_codegen_ssa = { path = "../rustc_codegen_ssa" }
 # crate is intended to be used by stable MIR consumers, which are not in-tree
 rustc_smir = { path = "../rustc_smir" }
 
-[dependencies.jemalloc-sys]
-version = "0.5.0"
+# [dependencies.jemalloc-sys]
+# version = "0.5.0"
+# optional = true
+# features = ['unprefixed_malloc_on_supported_platforms']
+
+[dependencies.libmimalloc-sys]
+version = '0.1.26'
 optional = true
-features = ['unprefixed_malloc_on_supported_platforms']
+default-features = false
+features = ['extended', 'override']
 
 [features]
-jemalloc = ['jemalloc-sys']
+jemalloc = ['libmimalloc-sys']
 llvm = ['rustc_driver/llvm']
 max_level_info = ['rustc_driver/max_level_info']
 rustc_use_parallel_compiler = ['rustc_driver/rustc_use_parallel_compiler']
